--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,14 +10,9 @@
   "dependencies": {
     "axios": "^1.7.8",
     "core-js": "^3.8.3",
-<<<<<<< Updated upstream
     "mongodb": "^6.12.0",
-=======
-    "event-pubsub": "^5.0.3",
->>>>>>> Stashed changes
     "vue": "^3.5.13",
-    "vue-router": "^4.0.3",
-    "wcwidth": "^1.0.1"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
