added signup/signin page
also made a little progress in the logic of account creation, not all of it tho

--- a/src/backend/database/.env
+++ b/src/backend/database/.env
@@ -6,6 +6,10 @@ MONGO_PASSWORD=mongopassword
 MONGO_HOST=10.115.2.45
 MONGO_PORT=8717
 
-# MongoDB Database Name
-MONGO_DB_NAME=articles
-MONGO_COLLECTION_NAME=news-articles
+# MongoDB Database Name for articles
+MONGO_DB_NAME_ARTICLES=articles
+MONGO_COLLECTION_NAME_ARTICLES=news-articles
+
+# MongoDB Database Name for accounts
+MONGO_DB_NAME_ACCOUNTS=accounts
+MONGO_COLLECTION_NAME_ACCOUNTS=accounts
