--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "bcrypt": "^5.1.1",
     "core-js": "^3.8.3",
+    "crypto": "^1.0.1",
     "mongodb": "^6.12.0",
+    "nodemailer": "^6.9.16",
+    "sass-loader": "^16.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.0.3"
   },
