--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -5,18 +5,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.16"
-=======
-=======
->>>>>>> Stashed changes
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1"
->>>>>>> Stashed changes
   },
   "type": "module"
 }
