--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "core-js": "^3.8.3",
@@ -16,6 +18,7 @@
     "nodemailer": "^6.9.16",
     "sass-loader": "^16.0.4",
     "vue": "^3.5.13",
+    "vue-material-design-icons": "^5.3.1",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
