--- a/src/backend/database/.env
+++ b/src/backend/database/.env
@@ -1,15 +1,22 @@
 # MongoDB Credentials
 MONGO_USERNAME=root
 MONGO_PASSWORD=mongopassword
-
+ 
 # MongoDB Host and Port
 MONGO_HOST=10.115.2.45
 MONGO_PORT=8717
-
+ 
 # MongoDB Database Name for articles
 MONGO_DB_NAME_ARTICLES=articles
 MONGO_COLLECTION_NAME_ARTICLES=news-articles
-
+ 
 # MongoDB Database Name for accounts
 MONGO_DB_NAME_ACCOUNTS=accounts
 MONGO_COLLECTION_NAME_ACCOUNTS=accounts
+ 
+# E-Mail Credentials
+EMAIL_USERNAME='sportspheresite@gmail.com'
+EMAIL_PASSWORD='nwnl aybh wvfs pjll'
+ 
+# JWT Constants
+JWT_SECRET=HappyBistro64
