--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@unhead/vue": "^1.11.18",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "core-js": "^3.8.3",
@@ -16,6 +17,7 @@
     "nodemailer": "^6.9.16",
     "sass-loader": "^16.0.4",
     "vue": "^3.5.13",
+    "vue-recaptcha": "^3.0.0-alpha.6",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
