--- a/src/backend/database/.env
+++ b/src/backend/database/.env
@@ -13,3 +13,10 @@ MONGO_COLLECTION_NAME_ARTICLES=news-articles
 # MongoDB Database Name for accounts
 MONGO_DB_NAME_ACCOUNTS=accounts
 MONGO_COLLECTION_NAME_ACCOUNTS=accounts
+
+# E-Mail Credentials
+EMAIL_USERNAME='sportspheresite@gmail.com'
+EMAIL_PASSWORD='nwnl aybh wvfs pjll'
+
+# JWT Constants
+JWT_SECRET=HappyBistro64
