--- a/src/backend/database/.env
+++ b/src/backend/database/.env
@@ -14,6 +14,10 @@ MONGO_COLLECTION_NAME_ARTICLES=news-articles
 MONGO_DB_NAME_ACCOUNTS=accounts
 MONGO_COLLECTION_NAME_ACCOUNTS=accounts
 
+# MongoDB Database Name for verification
+MONGO_DB_NAME_VERIFICATION=verification
+MONGO_COLLECTION_NAME_VERIFICATION=verification
+
 # E-Mail Credentials
 EMAIL_USERNAME='sportspheresite@gmail.com'
 EMAIL_PASSWORD='nwnl aybh wvfs pjll'
