--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,10 +13,15 @@
     "bcrypt": "^5.1.1",
     "core-js": "^3.8.3",
     "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.1",
     "mongodb": "^6.12.0",
     "nodemailer": "^6.9.16",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "sass-loader": "^16.0.4",
     "vue": "^3.5.13",
+    "vue-hcaptcha": "^0.1.1",
+    "vue-material-design-icons": "^5.3.1",
     "vue-recaptcha": "^3.0.0-alpha.6",
     "vue-router": "^4.0.3"
   },
