--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -17,6 +17,7 @@
     "nodemailer": "^6.9.16",
     "sass-loader": "^16.0.4",
     "vue": "^3.5.13",
+    "vue-material-design-icons": "^5.3.1",
     "vue-recaptcha": "^3.0.0-alpha.6",
     "vue-router": "^4.0.3"
   },
